--- a/chapter10.css
+++ b/chapter10.css
@@ -64,3 +64,31 @@ footer{
   height:50px;
   background-color: #aaaaaa;
 }
+
+@media screen and (max-width:767px){
+  select{
+    width: 100px;
+  }
+
+  header{
+    height: 50px;
+  }
+
+  main{
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: block;
+  }
+
+ .box{
+   width: 90%;
+   margin:20px auto;
+ }
+
+ }
+ .box:last-child{
+  margin-right:auto;
+ }
+
+}
